--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -8,6 +8,7 @@
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
+  height: 100%;
 }
 
 /* Sections
@@ -17,6 +18,10 @@ html {
  */
 body {
   margin: 0;
+  height: 100%;
+}
+#root {
+  height: 100%;
 }
 
 /**
