--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,7 +1,8 @@
 .footer {
+  height: 15%;
+  width: 100%;
   background-color: #333;
   color: #fff;
-  padding: 1rem 0;
   text-align: center;
 }
 .footer .footer-content {
@@ -9,11 +10,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 .footer .social-links a {
   color: #fff;
-  margin: 0 0.5rem;
+  margin: 0.5rem;
   text-decoration: none;
 }
 .footer .social-links a:hover {
