--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,7 +1,9 @@
 .footer {
+  height: 15%;
+  width: 100%;
+
   background-color: #333;
   color: #fff;
-  padding: 1rem 0;
   text-align: center;
 
   .footer-content {
@@ -9,12 +11,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
+    gap: 0.5rem;
   }
 
   .social-links a {
     color: #fff;
-    margin: 0 0.5rem;
+    margin: 0.5rem;
     text-decoration: none;
     &:hover {
       text-decoration: underline;
