--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,26 +1,30 @@
-.header {
+header {
+  width: 100%;
+  height: 15%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 2rem;
   background-color: #333;
   color: #fff;
 }
-.header .logo a {
+header .logo a {
   color: #fff;
   text-decoration: none;
   font-size: 1.5rem;
   font-weight: bold;
 }
-.header .navigation ul {
+header .navigation {
+  padding-right: 3vh;
+}
+header .navigation ul {
   list-style: none;
   display: flex;
   gap: 1rem;
 }
-.header .navigation a {
+header .navigation a {
   color: #fff;
   text-decoration: none;
 }
-.header .navigation a:hover {
+header .navigation a:hover {
   text-decoration: underline;
 }/*# sourceMappingURL=header.css.map */
