--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,8 +1,10 @@
-.header {
+header {
+  width: 100%;
+  height: 15%;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 2rem;
   background-color: #333;
   color: #fff;
 
@@ -13,6 +15,9 @@
     font-weight: bold;
   }
 
+  .navigation {
+    padding-right: 3vh;
+  }
   .navigation ul {
     list-style: none;
     display: flex;
