--- a/src/styles/quiz.scss
+++ b/src/styles/quiz.scss
@@ -1,8 +1,12 @@
-.App {
+.body {
+  height: 100%;
+  width: 100%;
+}
+
+.body_quiz {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
-  width: 100%;
-}/*# sourceMappingURL=app.css.map */
+  height: 70%;
+}
