--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,4 +1,4 @@
-.quiz-card {
+.quiz_card {
   background-size: cover;
   background-position: center;
   color: #fff;
@@ -11,23 +11,23 @@
   padding: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-.quiz-card .difficulty {
+.quiz_card .difficulty {
   display: flex;
   justify-content: flex-start;
 }
-.quiz-card .difficulty .star {
+.quiz_card .difficulty .star {
   color: grey;
 }
-.quiz-card .difficulty .star.filled {
+.quiz_card .difficulty .star.filled {
   color: gold;
 }
-.quiz-card .title {
+.quiz_card .title {
   text-align: center;
   font-size: 24px;
   font-weight: bold;
   margin: auto;
 }
-.quiz-card .tags .tag {
+.quiz_card .tags .tag {
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 15px;
   padding: 5px 10px;
