--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,6 +1,7 @@
 .footer {
   height: 15%;
   width: 100%;
+  min-height: 75px;
   background-color: #333;
   color: #fff;
   text-align: center;
@@ -11,6 +12,10 @@
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
+}
+.footer .social-links {
+  display: flex;
+  margin-bottom: 5px;
 }
 .footer .social-links a {
   color: #fff;
