--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,6 +1,7 @@
 .footer {
   height: 15%;
   width: 100%;
+  min-height: 75px;
 
   background-color: #333;
   color: #fff;
@@ -14,6 +15,10 @@
     gap: 0.5rem;
   }
 
+  .social-links {
+    display: flex;
+    margin-bottom: 5px;
+  }
   .social-links a {
     color: #fff;
     margin: 0.5rem;
