--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,6 +1,7 @@
 header {
   width: 100%;
   height: 15%;
+  min-height: 75px;
   display: flex;
   justify-content: space-between;
   align-items: center;
