--- a/src/styles/account.scss
+++ b/src/styles/account.scss
@@ -94,3 +94,45 @@
   border-radius: 50%;
   margin-right: 20px;
 }
+
+.favorites_container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.favorite_card {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 20px;
+  width: 200px;
+  height: 250px; /* Ajustez selon le besoin */
+  cursor: pointer;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  display: flex;
+  align-items: flex-end; /* Aligner le contenu en bas */
+}
+
+.favorite_card:hover {
+  background-color: #f0f0f0;
+}
+
+.favorite_content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  color: white; /* Texte en blanc pour contraster avec le fond sombre */
+  padding: 10px;
+  border-radius: 8px;
+}
+
+.remove_favorite_btn {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  cursor: pointer;
+}
