--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -7,6 +7,10 @@
   background-color: #240046;
 
   .form-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 60%;
     background-color: #fff;
     padding: 20px;
     border-radius: 12px;
