--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -3,12 +3,10 @@
   background-position: center;
   color: #fff;
   position: relative;
-  height: 250px;
   border-radius: 8px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   cursor: pointer;
 
@@ -31,9 +29,14 @@
   }
 
   .quiz_card_content {
-    text-decoration: none; // Supprime le soulignement des liens
-    color: white; // Assure que le texte à l'intérieur du lien est blanc
-
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    color: white;
+    text-shadow: 0 0 3px black, 0 0 5px #0000ff;
     .difficulty {
       display: flex;
       justify-content: flex-start;
@@ -48,7 +51,8 @@
     }
 
     .title {
-      text-align: center;
+      display: flex;
+      text-align: left;
       font-size: 24px;
       font-weight: bold;
       margin: auto;
