--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -21,10 +21,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 20px;
-  height: 300px;
-  width: 300px;
-  margin: 10px;
+  height: 40vh;
+  width: 45vh;
+  margin: 3vh;
 }
 
 .quiz_card:hover {
