--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -32,6 +32,7 @@
 }
 .body_login .form-container input {
   padding: 10px;
+  margin: 15px 0;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
@@ -45,6 +46,7 @@
 .body_login .form-container .register-form {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 .body_login .form-container .logged-in {
   display: flex;
@@ -60,10 +62,7 @@
 .button {
   background-color: #573b8a;
   color: white;
-  padding: 10px 15px;
   border: none;
-  border-radius: 4px;
-  cursor: pointer;
 }
 .button:hover {
   background-color: #6d44b8;
